--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "otp-generator": "^4.0.1",
     "razorpay": "^2.9.6",
     "stripe": "^18.3.0",
     "validator": "^13.15.15"
